changed local linting settings to disable eslint, seems to have stopped wofrmatting issue on save in theme.liquid

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,47 @@
         "titleBar.activeBackground": "#e3436b",
         "titleBar.inactiveBackground": "#e3436b"
     },
-    
+    "eslint.enable": false,
+    // Enables formatting of .liquid files
+    "[liquid]": {
+        "editor.defaultFormatter": "sissel.shopify-liquid",
+        "editor.formatOnSave": true
+    },
+    // Enables formatting of all .css.liquid files
+    "[liquid-css]": {
+        "editor.defaultFormatter": "sissel.shopify-liquid",
+        "editor.formatOnSave": false
+    },
+    "better-comments.tags": [
+        {
+            "tag": "!",
+            "color": "#FF2D00",
+            "strikethrough": false,
+            "backgroundColor": "transparent"
+        },
+        {
+            "tag": "?",
+            "color": "#3498DB",
+            "strikethrough": false,
+            "backgroundColor": "transparent"
+        },
+        {
+            "tag": "//",
+            "color": "#474747",
+            "strikethrough": true,
+            "backgroundColor": "transparent"
+        },
+        {
+            "tag": "todo",
+            "color": "#FF8C00",
+            "strikethrough": false,
+            "backgroundColor": "transparent"
+        },
+        {
+            "tag": "*",
+            "color": "#98C379",
+            "strikethrough": false,
+            "backgroundColor": "transparent"
+        }
+    ],
 }
