--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -123,23 +123,10 @@
     "predictive_search_show_vendor": false,
     "predictive_search_show_price": false,
     "currency_code_enabled": true,
+    "cart_type": "drawer",
     "sections": {
       "announcement-bar": {
         "type": "announcement-bar",
-        "blocks": {
-          "announcement-bar-0": {
-            "type": "announcement",
-            "settings": {
-              "text": "Welcome to our store",
-              "text_alignment": "center",
-              "color_scheme": "background-1",
-              "link": ""
-            }
-          }
-        },
-        "block_order": [
-          "announcement-bar-0"
-        ],
         "settings": {
         }
       },
@@ -151,7 +138,7 @@
           "menu": "kinda-dawn-main-nav",
           "menu_type_desktop": "dropdown",
           "sticky_header_type": "on-scroll-up",
-          "show_line_separator": true,
+          "show_line_separator": false,
           "mobile_logo_position": "center",
           "margin_bottom": 0,
           "padding_top": 20,
